adding location costs to location slide

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <div class="main-container">
     <div class="place-container">
       <!-- going to use javascript to loop and create multiple slides -->
-      <div class="location-slide">
+      <!-- <div class="location-slide">
         <div class="black-background"></div>
         <img class="city-background-img" src="./assets/paris-background.jpg" alt="paris">
         <div class="location-details">
@@ -69,7 +69,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <div class="location-links">
         <a href="#" class="link-tour">Virtual Tour</a>
         <span></span>
