rough next prev slide functionality

--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@
         <a href="#" class="link-learn">Learn More</a>
       </div>
       <div class="location-scroll">
+        <p class="scroll-prev">Prev</p>
         <span class="scroll-length">
           <span class="scroll-distance"></span>
         </span>
-        <p class="scroll-current">1/3</p>
+        <p class="scroll-next">Next</p>
       </div>
     </div>
     <div class="socials-container">
